# pyslapi

./: .gitignore  Cargo.toml  README.md  import_scene_skp.py  pyproject.toml  render_all_scenes_from_skp.py  setup.py  sketchup.pyx
.github/ISSUE_TEMPLATE/: bug_report.md
Sketchup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sketchup_importer/: __init__.py
sketchup_importer/SKPutil/: __init__.py
slapi/: __init__.py  camera.pxd  color.pxd  component.pxd  defs.pxd  drawing_element.pxd  entities.pxd  entity.pxd  geometry.pxd  group.pxd  initialize.pxd  layer.pxd  material.pxd  model.pxd  scene.pxd  slapi.pxd  texture.pxd  transformation.pxd  unicodestring.pxd
slapi/geometry/: point2d.pxd  vector2d.pxd
slapi/model/: arccurve.pxd  attribute_dictionary.pxd  axes.pxd  camera.pxd  component.pxd  component_definition.pxd  component_instance.pxd  defs.pxd  drawing_element.pxd  edge.pxd  entities.pxd  entity.pxd  face.pxd  geometry_input.pxd  group.pxd  layer.pxd  material.pxd  mesh_helper.pxd  model.pxd  rendering_options.pxd  scene.pxd  texture.pxd  texture_writer.pxd  typed_value.pxd
slapi/utils/: math_helpers.pxd
slapi_rs/: Cargo.toml  README.md  build.rs  wrapper.h
slapi_rs/examples/: create_model.rs  model_info.rs  safe_example.rs
slapi_rs/src/: error.rs  lib.rs  safe.rs
