[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.24"]
build-backend = "setuptools.build_meta"

[project]
name = "Sketchup"
version = "0.24.0"
authors = [
    {name = "Martijn Berger"}
]
description = "Python bindings for the official Sketchup API"
readme = "README.md"
requires-python = ">=3.11.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/martijnberger/pyslapi"
"Bug Tracker" = "https://github.com/martijnberger/pyslapi/issues"

[tool.setuptools]
packages = ["sketchup_importer", "slapi"]

# Note: We still need setup.py for proper Cython extension configuration
# See setup.py for the extension module definitions 

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
select = [
    "C4",  # Flake comprehensions Complexity is too high
    "DTZ", # timezone-aware datetimes, banning naive datetime usage
    "E",   # Fix pydocstyle errors
    "F",   # PyFlakes
    "I",   # isort
    "RUF", # Ruff lints
    "UP",  # pyupgrade
    "W",   # Fix tabs, trailing spaces, bad newlines, long doc lines, and bad escape sequences.
    ]
ignore = [
    "E203",   # Whitespace-before-punctuation
    "RUF012", # mutable-class-default
    ]

[tool.ruff.lint.pycodestyle]
max-line-length = 120